fix: align eagle text next to hologram (bigger, moved up and right)

--- a/assets/app/card.css
+++ b/assets/app/card.css
@@ -160,10 +160,10 @@ body .bottom_bar{
 
 .eagle_text{
     position: absolute;
-    top: 82%;
-    left: 15.5%;
+    top: 74%;
+    left: 17%;
     width: 20%;
-    font-size: 9px;
+    font-size: 10px;
 }
 
 .eagle_video{
